--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam accusantium dolorem nam unde! Ratione ducimus tempore culpa fugit, repudiandae voluptates, inventore dolor, quod consequuntur numquam blanditiis est? Est, voluptatem neque!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ea quibusdam suscipit delectus ipsa eos optio voluptatum, quisquam itaque ipsam assumenda doloremque! Similique beatae minus amet praesentium ab? Soluta, sit.</p>
         </article>
     </main>
 </body>
