add new pages and some css

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Gratis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam accusantium dolorem nam unde! Ratione ducimus tempore culpa fugit, repudiandae voluptates, inventore dolor, quod consequuntur numquam blanditiis est? Est, voluptatem neque!</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ea quibusdam suscipit delectus ipsa eos optio voluptatum, quisquam itaque ipsam assumenda doloremque! Similique beatae minus amet praesentium ab? Soluta, sit.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
